--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ google-crc32c==1.1.2
 google-resumable-media==1.2.0
 googleapis-common-protos==1.53.0
 grpcio==1.36.1
+gunicorn==20.1.0
 httplib2==0.19.1
 idna==2.10
 itsdangerous==1.1.0
