--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==4.0.0
 click==7.1.2
 firebase-admin==4.5.3
 Flask==1.1.2
+Flask-Cors==3.0.10
 google-api-core==1.26.3
 google-api-python-client==2.1.0
 google-auth==1.28.0
@@ -26,6 +27,9 @@ keyboard==0.13.5
 MarkupSafe==1.1.1
 MouseInfo==0.1.3
 msgpack==1.0.2
+mysql==0.0.2
+mysql-connector==2.2.9
+mysqlclient==2.0.3
 packaging==20.9
 panda==0.3.1
 proto-plus==1.18.1
@@ -38,10 +42,12 @@ PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pyparsing==2.4.7
 pyperclip==1.8.1
+pypiwin32==223
 PyRect==0.1.4
 PyScreeze==0.1.26
 PyTweening==1.0.3
 pytz==2021.1
+pywin32==300
 requests==2.25.1
 rsa==4.7.2
 six==1.15.0
